--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>In this appendix we illustrate the use of our R function BinBayes.R to
+implement the Bayesian analysis discussed in the paper. We assume that the
+user has both the R and JAGS software packages installed and is familiar
+with the basic structure and syntax of the R language. In addition, the R
+packages, coda, lme4 and rjags are required. We recommend updating
+these three packages to their latest versions. The R function BinBayes.R
+requires three input variables as follows:</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
