--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>In this appendix we illustrate the use of our R function BinBayes.R to
+<p>We will illustrate the use of our R function BinBayes.R to
 implement the Bayesian analysis discussed in the paper. We assume that the
 user has both the R and JAGS software packages installed and is familiar
 with the basic structure and syntax of the R language. In addition, the R
