--- a/index.html
+++ b/index.html
@@ -20,11 +20,28 @@
 
     <section class="main-content">
       <h1>
-<a id="binbayes" class="anchor" href="#binbayes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BinBayes</h1>
+<a id="binbayesr" class="anchor" href="#binbayesr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BinBayes.R</h1>
 
-<p>BinBayes.R is the software implementaion of...</p>
+<p>BinBayes.R is the software implementaion of Bayesian approach for the mixed effects analysis of accuracy studies using mixed binomial regression models. We will illustrated how to use BinBayes.R in the following two examples, including result interpretation and plotting.</p>
 
-<p>For more specific demostration, please visit this <a href="http://v2south.github.io/BinBayes/">GitHub Page</a></p>
+<h2>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
+
+<p>We assume that the user has both the R and JAGS software packages installed and is familiar with the basic structure and syntax of the R language. In addition, we also require following three R pacckags.</p>
+
+<ul>
+<li>
+<strong>coda</strong>, which could be obtained at <a href="https://cran.r-project.org/web/packages/coda/index.html">CRAN</a>
+</li>
+<li>
+<strong>lme4</strong>, which could be obtained at <a href="https://cran.r-project.org/web/packages/lme4/index.html">CRAN</a>
+</li>
+<li>
+<strong>rjags</strong>, which could be obtained at <a href="https://cran.r-project.org/web/packages/rjags/index.html">CRAN</a>
+</li>
+</ul>
+
+<p>For installtion of these pacakages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/v2south/BinBayes">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</a> is maintained by <a href="https://github.com/v2south">v2south</a>.</span>
