--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>We assume that the user has both the <a href="https://www.cran.r-project.org/">R</a> and <a href="http://mcmc-jags.sourceforge.net/">JAGS</a> software packages installed and is familiar with the basic structure and syntax of the R language. In addition, we also require following three R packages: <a href="https://cran.r-project.org/web/packages/coda/index.html"><strong>coda</strong></a>,<a href="https://cran.r-project.org/web/packages/lme4/index.html"> <strong>lme4</strong></a> and 
+<p>We assume that the user has both the <a href="https://www.r-project.org/">R</a> and <a href="http://mcmc-jags.sourceforge.net/">JAGS</a> software packages installed and is familiar with the basic structure and syntax of the R language. In addition, we also require following three R packages: <a href="https://cran.r-project.org/web/packages/coda/index.html"><strong>coda</strong></a>,<a href="https://cran.r-project.org/web/packages/lme4/index.html"> <strong>lme4</strong></a> and 
 <a href="https://cran.r-project.org/web/packages/rjags/index.html"><strong>rjags</strong></a>. 
 For installation of these pacakages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
 
