--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</h1>
-      <h2 class="project-tagline">Yin Song, Farouk Nathoo, Michael E. J. Masson / </h2>
-      <h3 class="project-tagline">University of Victoria / </h2>
+      <h2 class="project-tagline">Yin Song, Farouk Nathoo, Michael E. J. Masson </h2>
+      <h3 class="project-tagline">Department of Mathematics and Statistics, University of Victoria  </h3>
+      <h3 class="project-tagline">Department of Psychology, University of Victoria  </h3>
 
       <a href="https://github.com/v2south/BinBayes" class="btn">View on GitHub</a>
       <a href="https://github.com/v2south/BinBayes/zipball/master" class="btn">Download .zip</a>
