--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 <p>We assume that the user has both the <a href="https://cran.r-project.org/mirrors.html">R</a> and <a href="http://mcmc-jags.sourceforge.net/">JAGS</a> software packages installed and is familiar with the basic structure and syntax of the R language. In addition, we also require following three R packages: <a href="https://cran.r-project.org/web/packages/coda/index.html"><strong>coda</strong></a>,<a href="https://cran.r-project.org/web/packages/lme4/index.html"> <strong>lme4</strong></a> and 
 <a href="https://cran.r-project.org/web/packages/rjags/index.html"><strong>rjags</strong></a>. 
-For installation of these pacakages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
+For installation of these packages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
 
 <p>The R function BinBayes.R requires three input variables as follows:</p>
 
 <ul>
-<li><p><strong> m_data </strong> is a matrix or dataframe containing the data from your study. This dataframe should have four columns. The first column contains the subject identifier; the second column contains the item identifier; the third column contains the identifier for experimental condition; the fourth column holds a binary valued accuracy response. These columns should be labelled as <em>subj</em>, <em>itemID</em>, <em>cond</em>, <em>Acc</em> respectively.</p></li>
+<li><p><strong> m_data </strong> is a matrix or data frame containing the data from your study. This data frame should have four columns. The first column contains the subject identifier; the second column contains the item identifier; the third column contains the identifier for experimental condition; the fourth column holds a binary valued accuracy response. These columns should be labelled as <em>subj</em>, <em>itemID</em>, <em>cond</em>, <em>Acc</em> respectively.</p></li>
 <li><p><strong>link</strong> is a string that specifies the link function as ”Logit” or ”Probit”.</p></li>
 <li>
 <strong> model </strong>  is a string taking five possible values as follows:
@@ -63,7 +63,7 @@ For installation of these pacakages, please see this <a href="https://cran.r-pro
 <h2>
 <a id="how-to-use-binbayesr" class="anchor" href="#how-to-use-binbayesr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use BinBayes.R</h2>
 
-<p>The function BinBayes.R can be downloaed from <a href="https://github.com/v2south/BinBayes/blob/master/BinBayes.R">here</a>. To get start, Let's set up the path that we save BinBayes.R and all the datasets. For example:</p>
+<p>The function BinBayes.R can be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/BinBayes.R">here</a>. To get start, Let's set up the path that we save BinBayes.R and all the datasets. For example:</p>
 
 <pre><code>&gt; # Path is the file directory where you save the BinBayes.R
 &gt; path &lt;- "/Users/Yin/Dropbox/Bayes Factor/BinBayes.R"
@@ -177,7 +177,7 @@ a[3]           -1.45065339  0.535163576
 a[4]           -0.71871493  1.922685809
 </code></pre>
 
-<p>To create the boxplots and density plots summarizing the posterior dis- tribution, we can first use the varnames() function in R to see all the variable names in the post summary component of the fitted model. We then ex- tract the corresponding variables to create posterior density plots and item effect boxplots for the parameters that we are interested in. For example:</p>
+<p>To create the boxplots and density plots summarizing the posterior distribution, we can first use the varnames() function in R to see all the variable names in the post summary component of the fitted model. We then ex- tract the corresponding variables to create posterior density plots and item effect boxplots for the parameters that we are interested in. For example:</p>
 
 <pre><code>&gt; varnames(M4_result$post_summary)
 [1] "a[1]"         "a[2]"         "a[3]"         "a[4]"         "a[5]"          
@@ -196,7 +196,7 @@ a[4]           -0.71871493  1.922685809
 
 <p><img src="https://cloud.githubusercontent.com/assets/2337149/13296876/787467fa-dae4-11e5-9932-bea8a89596a1.png" alt="Posterior Plot"></p>
 
-<p>To create boxplots of condition effect by item. We can do as follows:</p>
+<p>To create boxplots of condition effect by item, we can do as follows:</p>
 
 <ul>
 <li> Reformat the <em>post_summary</em> part from result as a matrix by <em>as.matirx()</em> function.</li>
@@ -206,7 +206,7 @@ a[4]           -0.71871493  1.922685809
 <li>Then use these ordered columns in (e) to create boxplot.</li>
 </ul>
 
-<p>We select the second condition(RD) in the R code demonstration below:</p>
+<p>We select the second condition (RD) in the R code demonstration below:</p>
 
 <pre><code># Since we are looking at second condition, we need to find the location of alpha[2] and all alpha_a[2,]s.
 # By observing from varnames() result, we can see that alpha[2] is on the 122 column and all alpha_a[2,]s is located from 126 to 604 by every 4 columns.
@@ -236,12 +236,12 @@ a[4]           -0.71871493  1.922685809
 <h2>
 <a id="example-1" class="anchor" href="#example-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 1</h2>
 
-<p>For this example, We were investigating the development of memory for visual scenes that occurs when one searches a scene for a particular object. We were specifically interested in what subjects might learn about other, non-target objects present in the scene while searching for the target object. In the first phase of the experiment, subject searched 80 scenes for a particular target object. In the test phase, they again searched the 80 scenes from the study phase as well as a set of 40 new scenes (new condition), looking for a specific target object in each case. For 40 of the scenes that had appeared in the first phase of the experiment, the target object was the same as in the first phase (studied condition), and for the other 40 scenes a new target was designated (alternate condition). In all 120 of these critical scenes, the target was present in the scene. Accuracy reflects whether or not the target was detected in the scene. Our primary interest was in whether there would be a benefit in the alternate condition, relative to the new condition, for having previously searched the scene (albeit for a different target). So the independent variable was scene type (studied, alternate, new) and the dependent variable was successful or failed detection of the target. There was also an additional set of scenes that did not contain the target that subjects were asked to search for, just to ensure that the task would be meaningful. Performance with these items was not analyzed. Dataset for this example could be downloaed from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Scenes3_Bayesian.txt">here</a>. </p>
+<p>For this example, We were investigating the development of memory for visual scenes that occurs when one searches a scene for a particular object. We were specifically interested in what subjects might learn about other, non-target objects present in the scene while searching for the target object. In the first phase of the experiment, subject searched 80 scenes for a particular target object. In the test phase, they again searched the 80 scenes from the study phase as well as a set of 40 new scenes (new condition), looking for a specific target object in each case. For 40 of the scenes that had appeared in the first phase of the experiment, the target object was the same as in the first phase (studied condition), and for the other 40 scenes a new target was designated (alternate condition). In all 120 of these critical scenes, the target was present in the scene. Accuracy reflects whether or not the target was detected in the scene. Our primary interest was in whether there would be a benefit in the alternate condition, relative to the new condition, for having previously searched the scene (albeit for a different target). So the independent variable was scene type (studied, alternate, new) and the dependent variable was successful or failed detection of the target. There was also an additional set of scenes that did not contain the target that subjects were asked to search for, just to ensure that the task would be meaningful. Performance with these items was not analyzed. Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Scenes3_Bayesian.txt">here</a>. </p>
 
 <h2>
 <a id="example-2" class="anchor" href="#example-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 2</h2>
 
-<p>For this example, We were investigating the influence of a semantic context on the identification of printed words shown either under clear (high contrast) or degraded (low contrast) conditions. The semantic context consisted of a prime word presented in advance of the target item. On critical trials, the target item was a word and on other trials the target was a nonword. The task was to classify the target on each trial as a word or a nonword (this is called a "lexical decision" task). Our interest is confined to trials with word targets. The prime word was either semantically related or unrelated to the target word (e.g., granite-STONE vs. attack-FLOWER), and the target word was presented either in clear or degraded form. Combining these two factors produced four conditions (related-clear, unrelated-clear, related-degraded, unrelated-degraded). For the current analysis, accuracy of response was the dependent measure.  Dataset for this example could be downloaed from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Prime3_Bayesian.txt">here</a>. </p>
+<p>For this example, We were investigating the influence of a semantic context on the identification of printed words shown either under clear (high contrast) or degraded (low contrast) conditions. The semantic context consisted of a prime word presented in advance of the target item. On critical trials, the target item was a word and on other trials the target was a nonword. The task was to classify the target on each trial as a word or a nonword (this is called a "lexical decision" task). Our interest is confined to trials with word targets. The prime word was either semantically related or unrelated to the target word (e.g., granite-STONE vs. attack-FLOWER), and the target word was presented either in clear or degraded form. Combining these two factors produced four conditions (related-clear, unrelated-clear, related-degraded, unrelated-degraded). For the current analysis, accuracy of response was the dependent measure.  Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Prime3_Bayesian.txt">here</a>. </p>
 
 <h2>
 <a id="future-work" class="anchor" href="#future-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future Work</h2>
