--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <p>We assume that the user has both the <a href="https://cran.r-project.org/mirrors.html">R</a> and <a href="http://mcmc-jags.sourceforge.net/">JAGS</a> software packages installed and is familiar with the basic structure and syntax of the R language. In addition, we also require following three R packages: <a href="https://cran.r-project.org/web/packages/coda/index.html"><strong>coda</strong></a>,<a href="https://cran.r-project.org/web/packages/lme4/index.html"> <strong>lme4</strong></a> and 
 <a href="https://cran.r-project.org/web/packages/rjags/index.html"><strong>rjags</strong></a>. 
-For installation of these packages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
+To install these R packages, please see this <a href="https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Installing-packages">manual</a> from CRAN. </p>
 
 <p>The R function BinBayes.R requires three input variables as follows:</p>
 
@@ -60,23 +60,37 @@ For installation of these packages, please see this <a href="https://cran.r-proj
 <strong>post_summary</strong> is an mcmc list containing samples from the posterior distribution for all components of the fitted model.</li>
 </ul>
 
+<p>We will illustrate how to use BinBayes.R in the following two examples.</p>
+
 <h2>
-<a id="how-to-use-binbayesr" class="anchor" href="#how-to-use-binbayesr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use BinBayes.R</h2>
+<a id="example-1" class="anchor" href="#example-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 1</h2>
 
-<p>The function BinBayes.R can be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/BinBayes.R">here</a>. To get start, Let's set up the path that we save BinBayes.R and all the datasets. For example:</p>
+<p>For this example, We were investigating the development of memory for visual scenes that occurs when one searches a scene for a particular object. We were specifically interested in what subjects might learn about other, non-target objects present in the scene while searching for the target object. In the first phase of the experiment, subject searched 80 scenes for a particular target object. In the test phase, they again searched the 80 scenes from the study phase as well as a set of 40 new scenes (new condition), looking for a specific target object in each case. For 40 of the scenes that had appeared in the first phase of the experiment, the target object was the same as in the first phase (studied condition), and for the other 40 scenes a new target was designated (alternate condition). In all 120 of these critical scenes, the target was present in the scene. Accuracy reflects whether or not the target was detected in the scene. Our primary interest was in whether there would be a benefit in the alternate condition, relative to the new condition, for having previously searched the scene (albeit for a different target). So the independent variable was scene type (studied, alternate, new) and the dependent variable was successful or failed detection of the target. There was also an additional set of scenes that did not contain the target that subjects were asked to search for, just to ensure that the task would be meaningful. Performance with these items was not analyzed. Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Scenes3_Bayesian.txt">here</a>. </p>
 
-<pre><code>&gt; # Path is the file directory where you save the BinBayes.R
-&gt; path &lt;- "/Users/Yin/Dropbox/Bayes Factor/BinBayes.R"
-&gt; # Load BinBayes.R
-&gt; source(path)
-&gt; # Read the data into R
-&gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/Bayes Factor/Prime3
-Bayesian.txt",header=TRUE, na.strings=’.’,
-colClasses=c(’factor’,’factor’,’factor’,’numeric’))
-&gt; # Remove cases with missing values
-&gt; accuracy&lt;-na.omit(accuracy)
-&gt; accuracy
-&gt; accuracy
+<h2>
+<a id="example-2" class="anchor" href="#example-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 2</h2>
+
+<p>For this example, we were investigating the influence of a semantic context on the identification of printed words shown either under clear (high contrast) or degraded (low contrast) conditions. The semantic context consisted of a prime word presented in advance of the target item. On critical trials, the target item was a word and on other trials the target was a nonword. The task was to classify the target on each trial as a word or a nonword (this is called a "lexical decision" task). Our interest is confined to trials with word targets. The prime word was either semantically related or unrelated to the target word (e.g., granite-STONE vs. attack-FLOWER), and the target word was presented either in clear or degraded form. Combining these two factors produced four conditions (related-clear, unrelated-clear, related-degraded, unrelated-degraded). For the current analysis, accuracy of response was the dependent measure. Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Prime3_Bayesian.txt">here</a> and it has:</p>
+
+<ul>
+<li> 72 subjects</li>
+<li> 4 conditions</li>
+<li> 120 items</li>
+<li> 8640 total observations</li>
+<li> Overall accuracy 95.4%</li>
+</ul>
+
+<p>To get started, Let's download the BinBaye.R from <a href="https://github.com/v2south/BinBayes/blob/master/BinBayes.R">here</a> and save it in the same directory or folder with dataset Prime3_Bayesian.txt.</p>
+
+<pre><code> # Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+ &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
+
+ # Load BinBayes.R
+ &gt; source(path)
+
+ # Read the data into R
+ &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, colClasses=c(’factor’,’factor’,’factor’,’numeric’))
+ &gt; accuracy
      subj itemID cond Acc
 1     S01   i001   UD   1
 2     S01   i002   RD   1
@@ -88,36 +102,26 @@ colClasses=c(’factor’,’factor’,’factor’,’numeric’))
 8     S01   i008   UD   1
 9     S01   i009   RC   1
 10    S01   i010   UD   1
-11    S01   i011   UC   1
-12    S01   i012   RD   1
-13    S01   i013   UD   1
 .
 .
 .
+
 </code></pre>
 
-<p>Now, we can apply BinBaye.R to specific model:</p>
+<p>Suppose we are interested Model 4 with Logit as link function. We can compute the BIC and WAIC values as:</p>
 
-<pre><code>&gt; M4_result &lt;- BinBayes(accuracy, "M4", "Logit")
-&gt; # BIC value
-&gt; M4_result$bic
+<pre><code> # Model 4 with Logit link
+&gt; L4_result &lt;- BinBayes(accuracy, "M4", "Logit")
+
+&gt; L4_result$bic
 [1] 2996.642
-&gt; # WAIC value
-30
-&gt; M4_result$waic
+
+&gt; L4_result$waic
 [1] 2799.036
-&gt; # The following is part of the Post_Summary
-&gt; M4_result$post_summary[1:5,1:5]
-[[1]]
-          a[1]      a[2]       a[3]      a[4]        a[5]
-[1,] -1.872848 0.7381711 -1.7706177 0.3784899 -0.11543930
-[2,] -1.673983 0.8850012 -1.6350146 0.5198886  0.47122561
-[3,] -1.555514 0.4032484 -1.2782973 0.4250902  0.68646389
-[4,] -1.767328 1.3305617 -1.2789133 1.0805838  0.75447270
-[5,] -1.704587 2.8370053  0.4086459 0.3240679 -0.01821947
+
 </code></pre>
 
-<p>Also, we can use the <strong>summary()</strong> function to get the posterior mean, posterior quantiles, and so on.</p>
+<p>We can also summarize the posterior distribution of L4 with <strong>summary()</strong> function as:</p>
 
 <pre><code>&gt; summary(M4_result$post_summary)
                        Mean         SD     Naive SE Time-series SE
@@ -166,6 +170,51 @@ sigma_alpha_a   0.09272  0.199065  0.304277  0.418378  0.62032
 sigma_b         0.27230  0.384950  0.442368  0.501785  0.62098
 </code></pre>
 
+<p>The notations for each model compoent are:</p>
+
+<p></p>
+
+<table>
+<thead>
+<tr>
+<th align="center">Model Component</th>
+<th align="center">Explanation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">alpha[i]</td>
+<td align="center">Fixed Effect from Condition[i]</td>
+</tr>
+<tr>
+<td align="center">a[j]</td>
+<td align="center">Random Effect from Item[j]</td>
+</tr>
+<tr>
+<td align="center">b[k]</td>
+<td align="center">Random Effect from Subject[k]</td>
+</tr>
+<tr>
+<td align="center">beta0</td>
+<td align="center">Model Intercept</td>
+</tr>
+<tr>
+<td align="center">sigma_alpha_a</td>
+<td align="center">Standard Deviation for Random Effect between Condition and Item</td>
+</tr>
+<tr>
+<td align="center">sigma_b</td>
+<td align="center">Standard Deviation for Random Subject Effect</td>
+</tr>
+<tr>
+<td align="center">sigma_a</td>
+<td align="center">Standard Deviation for Random Item Effect</td>
+</tr>
+</tbody>
+</table>
+
+<p></p>
+
 <p>To get the 95% HPD interval, we can use the <strong>HPDinterval()</strong> functionas follows</p>
 
 <pre><code>&gt; HPDinterval(M4_result$post_summary)
@@ -175,76 +224,11 @@ a[1]           -2.37513723 -0.876461878
 a[2]           -0.42330027  2.542678120
 a[3]           -1.45065339  0.535163576
 a[4]           -0.71871493  1.922685809
-</code></pre>
-
-<p>To create the boxplots and density plots summarizing the posterior distribution, we can first use the varnames() function in R to see all the variable names in the post summary component of the fitted model. We then ex- tract the corresponding variables to create posterior density plots and item effect boxplots for the parameters that we are interested in. For example:</p>
-
-<pre><code>&gt; varnames(M4_result$post_summary)
-[1] "a[1]"         "a[2]"         "a[3]"         "a[4]"         "a[5]"          
-[6] "a[6]"         "a[7]"         "a[8]"         "a[9]"         "a[10]"         
 .
 .
 .
-[671] "b[67]"      "b[68]"        "b[69]"        "b[70]"        "b[71]"         
-[676] "b[72]"      "beta0"        "sigma_a"      "sigma_alpha_a" "sigma_b"  
+.
 </code></pre>
-
-<p>To get the posterior density for "sigma_a", which is standard deviation for random item effect, we need to find the location of  "sigma_a" in this mcmc list which is in column 678. Then we can get:</p>
-
-<pre><code>&gt; plot(M4_result$post_summary[,678])
-</code></pre>
-
-<p><img src="https://cloud.githubusercontent.com/assets/2337149/13296876/787467fa-dae4-11e5-9932-bea8a89596a1.png" alt="Posterior Plot"></p>
-
-<p>To create boxplots of condition effect by item, we can do as follows:</p>
-
-<ul>
-<li> Reformat the <em>post_summary</em> part from result as a matrix by <em>as.matirx()</em> function.</li>
-<li>Use <em>varnames()</em> function to locate the columns of fixed effect of condition and mix effect between item and condition for the specific condition.</li>
-<li>Add the fixed condition effect to the corresponding mix effect columns.</li>
-<li>Use <em>apply()</em> function to find the median of columns obtained in (c) and sort them by <em>order()</em> function.</li>
-<li>Then use these ordered columns in (e) to create boxplot.</li>
-</ul>
-
-<p>We select the second condition (RD) in the R code demonstration below:</p>
-
-<pre><code># Since we are looking at second condition, we need to find the location of alpha[2] and all alpha_a[2,]s.
-# By observing from varnames() result, we can see that alpha[2] is on the 122 column and all alpha_a[2,]s is located from 126 to 604 by every 4 columns.
-# We have 120 items for each condition
-&gt; index &lt;- seq(from=126, to=604, by=4)
-&gt; rd_item &lt;- as.matrix(M4_result$post_summary)[, index]
-&gt; colnames(rd_item) &lt;- seq(from=1,to=120)
-&gt; # Fixed effect from second condition(RD)
-&gt; alpha_2 &lt;- as.matrix(M4_result$post_summary)[,122]
-&gt; # Add the fixed effect to the mix effect
-&gt; for(i in  1:120){
-+   rd_item[,i] &lt;- rd_item[,i] + alpha_2
-+ }
-&gt; # Sort the columns by median and get the index of sorted columns
-&gt; t2 &lt;- apply(rd_item,2, median)
-&gt; order_index &lt;- order(t2)
-&gt; # Swap the columns and their column names
-&gt; rd_item[,1:120] &lt;- rd_item[,order_index]
-&gt; colnames(rd_item) &lt;- order_index
-&gt; boxplot(rd_item,outline=FALSE,col="green")
-&gt; abline(h=0,col="red")
-&gt; title(main="RD effect by item")
-</code></pre>
-
-<p><img src="https://cloud.githubusercontent.com/assets/2337149/13300180/b19635fe-daf3-11e5-83e1-f1851c5bfacf.png" width="800"></p>
-
-<h2>
-<a id="example-1" class="anchor" href="#example-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 1</h2>
-
-<p>For this example, We were investigating the development of memory for visual scenes that occurs when one searches a scene for a particular object. We were specifically interested in what subjects might learn about other, non-target objects present in the scene while searching for the target object. In the first phase of the experiment, subject searched 80 scenes for a particular target object. In the test phase, they again searched the 80 scenes from the study phase as well as a set of 40 new scenes (new condition), looking for a specific target object in each case. For 40 of the scenes that had appeared in the first phase of the experiment, the target object was the same as in the first phase (studied condition), and for the other 40 scenes a new target was designated (alternate condition). In all 120 of these critical scenes, the target was present in the scene. Accuracy reflects whether or not the target was detected in the scene. Our primary interest was in whether there would be a benefit in the alternate condition, relative to the new condition, for having previously searched the scene (albeit for a different target). So the independent variable was scene type (studied, alternate, new) and the dependent variable was successful or failed detection of the target. There was also an additional set of scenes that did not contain the target that subjects were asked to search for, just to ensure that the task would be meaningful. Performance with these items was not analyzed. Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Scenes3_Bayesian.txt">here</a>. </p>
-
-<h2>
-<a id="example-2" class="anchor" href="#example-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example 2</h2>
-
-<p>For this example, We were investigating the influence of a semantic context on the identification of printed words shown either under clear (high contrast) or degraded (low contrast) conditions. The semantic context consisted of a prime word presented in advance of the target item. On critical trials, the target item was a word and on other trials the target was a nonword. The task was to classify the target on each trial as a word or a nonword (this is called a "lexical decision" task). Our interest is confined to trials with word targets. The prime word was either semantically related or unrelated to the target word (e.g., granite-STONE vs. attack-FLOWER), and the target word was presented either in clear or degraded form. Combining these two factors produced four conditions (related-clear, unrelated-clear, related-degraded, unrelated-degraded). For the current analysis, accuracy of response was the dependent measure.  Dataset for this example could be downloaded from <a href="https://github.com/v2south/BinBayes/blob/master/dataset/Prime3_Bayesian.txt">here</a>. </p>
-
-<h2>
-<a id="future-work" class="anchor" href="#future-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future Work</h2>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/v2south/BinBayes">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</a> is maintained by <a href="https://github.com/v2south">v2south</a>.</span>
