Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</h1>
       <h2 class="project-tagline">Yin Song, Farouk Nathoo, Michael E. J. Masson </h2>
-      <h4 class="project-tagline">Department of Mathematics and Statistics, University of Victoria </h4>
-      <h4 class="project-tagline">Department of Psychology, University of Victoria </h4>
       <a href="https://github.com/v2south/BinBayes" class="btn">View on GitHub</a>
       <a href="https://github.com/v2south/BinBayes/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/v2south/BinBayes/tarball/master" class="btn">Download .tar.gz</a>
@@ -110,7 +108,7 @@ To install these R packages, please see this <a href="https://cran.r-project.org
 
 </code></pre>
 
-<p>Suppose we are interested Model 4 with Logit as link function. We can compute the BIC and WAIC values as:</p>
+<p>Suppose we are interested in Model 4 with Logit as link function. We can compute the BIC and WAIC values as:</p>
 
 <pre><code> # Model 4 with Logit link
 &gt; L4_result &lt;- BinBayes(accuracy, "M4", "Logit")
