--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</h1>
-      <h2 class="project-tagline">Yin Song^1^, Farouk Nathoo, Michael E. J. Masson </h2>
+      <h2 class="project-tagline">| Yin Song^1^, Farouk Nathoo, Michael E. J. Masson </h2>
       <h4 class="project-tagline">Department of Mathematics and Statistics, University of Victoria </h4>
       <h4 class="project-tagline">Department of Psychology, University of Victoria </h4>
       <a href="https://github.com/v2south/BinBayes" class="btn">View on GitHub</a>
