--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@ To install these R packages, please see this <a href="https://cran.r-project.org
 <strong>waic</strong>  is the value of the WAIC for the fitted model.</li>
 <li>
 <strong>post_summary</strong> is an mcmc list containing samples from the posterior distribution for all components of the fitted model.</li>
+<li>
+<strong>condition_level</strong> is the order of condition level in the model. The first level would be the default baseline.</li>
+<li>
+<strong>baseline</strong> is the baseline condition.</li>
 </ul>
 
 <p>We will illustrate how to use BinBayes.R in the following two examples.</p>
