--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ To install these R packages, please see this <a href="https://cran.r-project.org
 <li>"M5", model with random subject and item effects and where the effect of experimental condition varies across both subjects and items.</li>
 </ul>
 </li>
+<li><p><strong>baseline</strong> is a string that specifies the baseline condition.It's NULL by default.</p></li>
 </ul>
 
 <p>As illustrated below, the output of the BinBayes.R function will consist of an object having three components with the following names:</p>
