--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h4 class="project-tagline"> a. Department of Mathematics and Statistics, University of Victoria </h4>
       <h4 class="project-tagline"> b. Department of Psychology, University of Victoria </h4>
       <a href="https://github.com/v2south/BinBayes" class="btn">View on GitHub</a>
-      <a href="https://github.com/v2south/BinBayes/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/v2south/BinBayes/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/v2south/BinBayes/zipball/master" class="btn">Download BinBayes.zip</a>
+      <a href="https://github.com/v2south/BinBayes/tarball/master" class="btn">Download BinBayes.tar.gz</a>
     </section>
 
     <section class="main-content">
