--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ To install these R packages, please see this <a href="https://cran.r-project.org
 
 <p>To get started, Let's download the BinBaye.R and save it in the same directory or folder with dataset Scenes3_Bayesian.txt.</p>
 
-<pre><code># Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+<pre><code># Path is the file directory where you save the BinBayes.R and dataset Scenes3_Bayesian.txt should be in the same directory
  &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
 
  # Load BinBayes.R
@@ -211,7 +211,7 @@ sigma_b   0.70411 0.1253 0.0008858       0.001730
 
 <p></p>
 
-<table>
+<table align="center">
 <thead>
 <tr>
 <th align="center">Model Component</th>
@@ -384,7 +384,7 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
 
 </code></pre>
 
-<table>
+<table align="center">
 <thead>
 <tr>
 <th align="center">Model</th>
@@ -464,7 +464,7 @@ sigma_b         0.27230  0.384950  0.442368  0.501785  0.62098
 
 <p></p>
 
-<table>
+<table align="center">
 <thead>
 <tr>
 <th align="center">Model Component</th>
