--- a/index.html
+++ b/index.html
@@ -387,25 +387,25 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
 <table align="center">
 <thead>
 <tr>
-<th align="center">Model</th>
-<th align="center">BIC</th>
+<th>Model</th>
+<th>BIC</th>
 <th>WAIC</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center">Model 1 with Logit Link</td>
-<td align="center">2927.731</td>
+<td>Model 1 with Logit Link</td>
+<td>2927.731</td>
 <td>2826.157</td>
 </tr>
 <tr>
-<td align="center">Model 2 with Logit Link</td>
-<td align="center"><strong>2925.133</strong></td>
+<td>Model 2 with Logit Link</td>
+<td><strong>2925.133</strong></td>
 <td>2801.64</td>
 </tr>
 <tr>
-<td align="center">Model 4 with Logit Link</td>
-<td align="center">2996.642</td>
+<td>Model 4 with Logit Link</td>
+<td>2996.642</td>
 <td><strong>2799.036</strong></td>
 </tr>
 </tbody>
