--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Levels: RC RD UC UD
 &gt; colnames(rd_item) &lt;- order_index
 &gt; boxplot(rd_item,outline=FALSE,col="green")
 &gt; abline(h=0,col="red")
-&gt; title(main="RD effect by item")
+&gt; title(main="RD Effect by Item")
 </code></pre>
 
 <p><img src="https://cloud.githubusercontent.com/assets/2337149/13300180/b19635fe-daf3-11e5-83e1-f1851c5bfacf.png" width="800"></p>
