--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@ following order: subject identifier, item identifier, identifier for experimenta
 
  # Load BinBayes.R
  &gt; source(path)
+ # Load required packages    
+  
+  library(coda)
+  library(lme4)
+  library(rjags)
 
 # Read data into R
 &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Scenes3_Bayesian.txt", header=TRUE, na.strings='.',colClasses=c('factor','factor','factor','numeric'))
