--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">A Bayesian Approach to Logistic/Probit Mixed Effects Analysis of Repeated Measures Accuracy Studies</h1>
-      <h2 class="project-tagline">Yin Song, Farouk Nathoo, Michael E. J. Masson </h2>
+      <h2 class="project-tagline"> Yin Song <sup> a </sup> , Farouk Nathoo <sup> a </sup>, Michael E. J. Masson <sup> b </sup> </h2>
+      <h4 class="project-tagline"> a. Department of Mathematics and Statistics, University of Victoria </h4>
+      <h4 class="project-tagline"> b. Department of Psychology, University of Victoria </h4>
       <a href="https://github.com/v2south/BinBayes" class="btn">View on GitHub</a>
       <a href="https://github.com/v2south/BinBayes/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/v2south/BinBayes/tarball/master" class="btn">Download .tar.gz</a>
