--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ following order: subject identifier, item identifier, identifier for experimenta
 
 <p>To get started, let's download the BinBaye.R and save it in the same directory or folder with dataset Scenes3_Bayesian.txt.</p>
 
-<pre><code># Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+<pre><code># Path is the file directory where you save the BinBayes.R and 
+dataset Prime3_Bayesian.txt should be in the same directory
  &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
 
  # Load BinBayes.R
@@ -99,7 +100,6 @@ following order: subject identifier, item identifier, identifier for experimenta
 
 # Read data into R
 &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Scenes3_Bayesian.txt", header=TRUE, na.strings='.',
-
 colClasses=c('factor','factor','factor','numeric'))
 &gt; #remove cases with missing values
 &gt; accuracy&lt;-na.omit(accuracy)
