--- a/index.html
+++ b/index.html
@@ -339,14 +339,16 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
 
 <p>To get started, let's download the BinBaye.R and save it in the same directory or folder with dataset Prime3_Bayesian.txt.</p>
 
-<pre><code> # Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+<pre><code> # Path is the file directory where you save the BinBayes.R and 
+dataset Prime3_Bayesian.txt should be in the same directory
  &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
 
  # Load BinBayes.R
  &gt; source(path)
 
  # Read the data into R
- &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, colClasses=c(’factor’,’factor’,’factor’,’numeric’))
+ &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, 
+ colClasses=c(’factor’,’factor’,’factor’,’numeric’))
  &gt; accuracy
      subj itemID cond Acc
 1     S01   i001   UD   1
