--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@ dataset Prime3_Bayesian.txt should be in the same directory
  &gt; source(path)
 
  # Read the data into R
- &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, 
- colClasses=c(’factor’,’factor’,’factor’,’numeric’))
+ &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, colClasses=c(’factor’,’factor’,’factor’,’numeric’))
  &gt; accuracy
      subj itemID cond Acc
 1     S01   i001   UD   1
