--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Levels: RC RD UC UD
 &gt; colnames(rd_item) &lt;- seq(from=1,to=120)
 
 &gt; # Fixed effect from second condition(RD)
-&gt; alpha_2 &lt;- as.matrix(M4_result$post_summary)[,122]
+&gt; alpha_2 &lt;- as.matrix(L4_result$post_summary)[,122]
 &gt; # Add the fixed effect to the mix effect
 
 &gt; for(i in  1:120){
