--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ Levels: RC RD UC UD
 &gt; title(main="RD effect by item")
 </code></pre>
 
-<p><img src="https://cloud.githubusercontent.com/assets/2337149/13300180/b19635fe-daf3-11e5-83e1-f1851c5bfacf.png" width="800"></p>
+<p><img src="https://github.com/v2south/BinBayes/blob/master/images/RD_effect_by_item.png" width="800"></p>
 
       <footer class="site-footer">
 
