--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ Levels: RC RD UC UD
 &gt; title(main="RD effect by item")
 </code></pre>
 
-<p><img src="https://github.com/v2south/BinBayes/blob/master/images/RD_effect_by_item.png" width="800"></p>
+<p><img src="https://cloud.githubusercontent.com/assets/2337149/14230795/8c088daa-f91b-11e5-806b-d4a629561398.png" width="800"></p>
 
       <footer class="site-footer">
 
