--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@ Levels: RC RD UC UD
 <p>To get one particular Item effect (for example Item 99) from the result above, we can do as follows:</p>
 
 <pre><code># Get the index of Item 99 and extract the corresponding column from item effect matrix rd_item above
-index_rd_item_99 &lt;- which(colnames(rd_item) == 99)
-item_99_effect &lt;- rd_item[, index_rd_item_99]
+> index_rd_item_99 &lt;- which(colnames(rd_item) == 99)
+> item_99_effect &lt;- rd_item[, index_rd_item_99]
 </code></pre>
 
       <footer class="site-footer">
