--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ Levels: RC RD UC UD
 -0.1418271  1.4581923 
 </code></pre>
 
-<p>Also, a kernal density estimate for item identified above could be plotted as:</p>
+<p>Also, a kernel density estimation for item identified above, which is the posterior distribution for the effect of experimental condition RD specific to item i020, could be plotted as: </p>
 
 <pre><code># Plot a kernel density estimate of the posterior density for the item identified above
 p_99 &lt;- density(rd_item[,99])
