--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ Levels: RC RD UC UD
 
 <p>Also, a kernel density estimation for item identified above, which is the posterior distribution for the effect of experimental condition RD specific to item i020, could be plotted as: </p>
 
-<pre><code># Plot a kernel density estimate of the posterior density for the item identified above
+<pre><code># Posterior distribution for the effect of experimental condition RD specific to item i020.
 p_99 &lt;- density(rd_item[,99])
 plot(p_99,main="Kernel Density Estimation for Item i020")
 </code></pre>
