--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ following order: subject identifier, item identifier, identifier for experimenta
 
 <p>To get started, let's download the BinBaye.R and save it in the same directory or folder with dataset Scenes3_Bayesian.txt.</p>
 
-<pre><code># Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+<pre><code># Path is the file directory where you save the BinBayes.R and 
+# dataset Prime3_Bayesian.txt should be in the same directory
  &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
 
  # Load BinBayes.R
@@ -338,7 +339,8 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
 
 <p>To get started, let's download the BinBaye.R and save it in the same directory or folder with dataset Prime3_Bayesian.txt.</p>
 
-<pre><code> # Path is the file directory where you save the BinBayes.R and dataset Prime3_Bayesian.txt should be in the same directory
+<pre><code> # Path is the file directory where you save the BinBayes.R and 
+# dataset Prime3_Bayesian.txt should be in the same directory
  &gt; path &lt;- "/Users/Yin/Dropbox/BinBayes/BinBayes.R"
 
  # Load BinBayes.R
@@ -570,8 +572,8 @@ Levels: RC RD UC UD
 Levels: RC RD UC UD
 
 # Notice that RD is the second condition, we need to find the location of alpha[2] and all alpha_a[2,]s.
-# By observing from varnames() result, we can see that alpha[2] is on the 122 column and all alpha_a[2,]s is located from 126 to 604 by every 4 columns.
-# We have 120 items for each condition.
+# By observing from varnames() result, we can see that alpha[2] is on the 122 column and 
+# all alpha_a[2,]s is located from 126 to 604 by every 4 columns. We have 120 items for each condition.
 
 &gt; index &lt;- seq(from=126, to=604, by=4)
 
