--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ following order: subject identifier, item identifier, identifier for experimenta
  &gt; library(rjags)
 
 # Read data into R
-&gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Scenes3_Bayesian.txt", header=TRUE, na.strings='.',
-colClasses=c('factor','factor','factor','numeric'))
+&gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Scenes3_Bayesian.txt", header=TRUE, 
+na.strings='.',colClasses=c('factor','factor','factor','numeric'))
 &gt; #remove cases with missing values
 &gt; accuracy&lt;-na.omit(accuracy)
 &gt; accuracy
@@ -347,8 +347,8 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
  &gt; source(path)
 
  # Read the data into R
- &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, na.strings=’.’, 
- colClasses=c(’factor’,’factor’,’factor’,’numeric’))
+ &gt; accuracy &lt;- read.table("/Users/Yin/Dropbox/BinBayes/Prime3_Bayesian.txt",header=TRUE, 
+ na.strings=’.’,colClasses=c(’factor’,’factor’,’factor’,’numeric’))
  &gt; accuracy
      subj itemID cond Acc
 1     S01   i001   UD   1
