--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>
 <a id="binbayesr" class="anchor" href="#binbayesr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BinBayes.R</h1>
 
-<p>BinBayes.R is the software implementation for the paper "A Bayesian approach for the mixed effects analysis of repeated measures accuracy studies."</p>
+<p>BinBayes.R is the software implementation for the paper "A Bayesian approach for the mixed effects analysis of repeated measures accuracy studies." which could be downloaded from <a href = "https://github.com/v2south/BinBayes/blob/master/SongEtAl2016.pdf" > here </a></p>
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
